--- a/index.html
+++ b/index.html
@@ -1,6 +1,17 @@
 <html>
+<head>
+    <title>Daniel Hardman's presentations</title>
+    <style>
+        body {
+            color: #444;
+            font-family: Tahoma, sans-serif;
+            padding: 1em;
+        }
+
+    </style>
+</head>
 <body>
-<h1>Liberating Retail CBDC from the Oversight-vs-Privacy Tradeoff</h1>
+<h1 id="cbdc2021">Liberating Retail CBDC from the Oversight-vs-Privacy Tradeoff</h1>
 <p>Presented by Daniel Hardman at CBDC Conference, Frankfurt, 2021-10-05</p>
 <iframe title="vimeo-player" src="https://player.vimeo.com/video/628334827?h=b00fb8038b" width="640" height="360" frameborder="0" allowfullscreen></iframe>
 </body>
